--- a/VieOnDemo/Base.lproj/Main.storyboard
+++ b/VieOnDemo/Base.lproj/Main.storyboard
@@ -10,6 +10,117 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Forgot Pass View Controller-->
+        <scene sceneID="kty-pd-Bcd">
+            <objects>
+                <viewController id="VOy-aE-KwV" customClass="ForgotPassViewController" customModule="VieOnDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="HBb-nS-nJS">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="forgot-password-concept-illustration_114360-1123" translatesAutoresizingMaskIntoConstraints="NO" id="CKx-QO-M5s">
+                                <rect key="frame" x="60" y="107" width="300" height="249"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="249" id="5w4-58-dTH"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vui lòng nhập số điện thoại để đặt lại mật khẩu" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b74-46-rl2">
+                                <rect key="frame" x="20" y="364" width="374" height="20"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </label>
+                            <textField opaque="NO" tag="10" contentMode="scaleToFill" semanticContentAttribute="forceLeftToRight" verticalHuggingPriority="249" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Số điện thoại" minimumFontSize="5" translatesAutoresizingMaskIntoConstraints="NO" id="BIc-9j-8dC">
+                                <rect key="frame" x="60" y="444" width="334" height="40"/>
+                                <color key="tintColor" name="AccentColor"/>
+                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="phonePad"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="placeholderLabel.textColor">
+                                        <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="S-1" translatesAutoresizingMaskIntoConstraints="NO" id="Vim-sL-Irv">
+                                <rect key="frame" x="20" y="444" width="26" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="0eM-iP-CyH"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bdg-Y3-ahh">
+                                <rect key="frame" x="31" y="483" width="374" height="1"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Ot-lH-utD">
+                                <rect key="frame" x="20" y="584" width="374" height="48"/>
+                                <color key="backgroundColor" red="0.5439325706" green="0.5439325706" blue="0.5439325706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="0k4-6m-p2l"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="26"/>
+                                <state key="normal" title="Tiếp Tục">
+                                    <color key="titleColor" red="0.65285586330000001" green="0.65285586330000001" blue="0.65285586330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bạn đã có tài khoản?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Mw-rm-Z2l">
+                                <rect key="frame" x="50" y="680" width="158" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iGe-aH-Jly">
+                                <rect key="frame" x="216" y="675.5" width="119" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="inq-X6-ALs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Đăng nhập ngay">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Bko-c5-lIf"/>
+                        <color key="backgroundColor" systemColor="secondaryLabelColor"/>
+                        <constraints>
+                            <constraint firstItem="iGe-aH-Jly" firstAttribute="centerY" secondItem="5Mw-rm-Z2l" secondAttribute="centerY" id="2Oi-H5-YPE"/>
+                            <constraint firstItem="Bko-c5-lIf" firstAttribute="bottom" secondItem="Vim-sL-Irv" secondAttribute="bottom" constant="378" id="5lV-No-Sd9"/>
+                            <constraint firstItem="Bdg-Y3-ahh" firstAttribute="bottom" secondItem="BIc-9j-8dC" secondAttribute="bottom" id="5qK-GQ-S48"/>
+                            <constraint firstItem="Bdg-Y3-ahh" firstAttribute="leading" secondItem="HBb-nS-nJS" secondAttribute="leadingMargin" constant="11" id="8Nt-i2-3AD"/>
+                            <constraint firstItem="BIc-9j-8dC" firstAttribute="leading" secondItem="Bko-c5-lIf" secondAttribute="leading" constant="60" id="8m8-rz-FjM"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Bdg-Y3-ahh" secondAttribute="trailing" constant="-11" id="9g5-CA-WSp"/>
+                            <constraint firstItem="3Ot-lH-utD" firstAttribute="leading" secondItem="Bko-c5-lIf" secondAttribute="leading" constant="20" id="Abw-T3-qjL"/>
+                            <constraint firstItem="5Mw-rm-Z2l" firstAttribute="leading" secondItem="Bko-c5-lIf" secondAttribute="leading" constant="50" id="BBt-5a-jVl"/>
+                            <constraint firstItem="b74-46-rl2" firstAttribute="top" secondItem="CKx-QO-M5s" secondAttribute="bottom" constant="8" id="GxF-Wz-39D"/>
+                            <constraint firstItem="5Mw-rm-Z2l" firstAttribute="top" secondItem="3Ot-lH-utD" secondAttribute="bottom" constant="48" id="IUe-hu-wdy"/>
+                            <constraint firstItem="Vim-sL-Irv" firstAttribute="bottom" secondItem="BIc-9j-8dC" secondAttribute="bottom" id="LuO-4Y-A0c"/>
+                            <constraint firstItem="Bko-c5-lIf" firstAttribute="trailing" secondItem="3Ot-lH-utD" secondAttribute="trailing" constant="20" id="P7Y-UP-RPh"/>
+                            <constraint firstItem="Bko-c5-lIf" firstAttribute="trailing" secondItem="BIc-9j-8dC" secondAttribute="trailing" constant="20" id="RL4-EB-Nqv"/>
+                            <constraint firstItem="CKx-QO-M5s" firstAttribute="leading" secondItem="Bko-c5-lIf" secondAttribute="leading" constant="60" id="SKF-RP-bLS"/>
+                            <constraint firstItem="Vim-sL-Irv" firstAttribute="top" secondItem="b74-46-rl2" secondAttribute="bottom" constant="60" id="Ysg-Et-7Mv"/>
+                            <constraint firstItem="Vim-sL-Irv" firstAttribute="leading" secondItem="Bko-c5-lIf" secondAttribute="leading" constant="20" id="a5H-Oi-fVf"/>
+                            <constraint firstItem="CKx-QO-M5s" firstAttribute="top" secondItem="Bko-c5-lIf" secondAttribute="top" constant="19" id="ghT-wc-UIV"/>
+                            <constraint firstItem="Bko-c5-lIf" firstAttribute="trailing" secondItem="b74-46-rl2" secondAttribute="trailing" constant="20" id="hkj-LK-13R"/>
+                            <constraint firstItem="BIc-9j-8dC" firstAttribute="top" secondItem="b74-46-rl2" secondAttribute="bottom" constant="60" id="oSN-aY-Vea"/>
+                            <constraint firstItem="b74-46-rl2" firstAttribute="leading" secondItem="Bko-c5-lIf" secondAttribute="leading" constant="20" id="pUA-6L-kbL"/>
+                            <constraint firstItem="3Ot-lH-utD" firstAttribute="top" secondItem="BIc-9j-8dC" secondAttribute="bottom" constant="100" id="po3-yE-Qrx"/>
+                            <constraint firstItem="Bko-c5-lIf" firstAttribute="trailing" secondItem="CKx-QO-M5s" secondAttribute="trailing" constant="54" id="qvM-XT-vVB"/>
+                            <constraint firstItem="Bdg-Y3-ahh" firstAttribute="top" secondItem="b74-46-rl2" secondAttribute="bottom" constant="99" id="rne-rg-0ly"/>
+                            <constraint firstItem="iGe-aH-Jly" firstAttribute="leading" secondItem="5Mw-rm-Z2l" secondAttribute="trailing" constant="8" id="tud-Xh-i6a"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="lxf-zC-m2s"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g8j-v7-bWw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1605.7971014492755" y="-662.27678571428567"/>
+        </scene>
         <!--Đăng Nhập-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -85,6 +196,9 @@
                                 <state key="normal" title="Quên mật khẩu ?">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="forgotPass:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bk3-QU-3GM"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WO0-TZ-ln2">
                                 <rect key="frame" x="20" y="443" width="374" height="1"/>
@@ -113,16 +227,6 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="seL-IW-am8">
-                                <rect key="frame" x="251" y="622" width="103" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="ozB-OM-Lh2"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Đăng Ký Ngay">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="facebook" translatesAutoresizingMaskIntoConstraints="NO" id="YTb-W4-IfN">
                                 <rect key="frame" x="100" y="812" width="50" height="50"/>
                             </imageView>
@@ -142,6 +246,16 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="seL-IW-am8">
+                                <rect key="frame" x="251" y="618" width="103" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="ozB-OM-Lh2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Đăng Ký Ngay">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
@@ -203,6 +317,7 @@
                         <outlet property="txtLine2" destination="ayw-WG-e0p" id="sDb-FG-ofT"/>
                         <outlet property="txtPass" destination="vmz-YU-cfx" id="ZwH-Wp-5Ll"/>
                         <outlet property="txtPhone" destination="3D3-9a-IiV" id="WkZ-k8-QaY"/>
+                        <segue destination="VOy-aE-KwV" kind="show" identifier="forgotPassSegue" id="Xcd-ha-6BA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -237,10 +352,14 @@
         <image name="apple" width="50" height="50"/>
         <image name="chevron.left" catalog="system" width="96" height="128"/>
         <image name="facebook" width="50" height="50"/>
+        <image name="forgot-password-concept-illustration_114360-1123" width="338" height="338"/>
         <image name="google" width="50" height="50"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="tertiaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
